created styles, title, footer

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,10 @@
     <title>Thoughts.FM</title>
 </head>
 <body>
-    <h1>Thoughts.FM - Tell Your Story and Post it Anonymously</h1>
+    <h1>Thoughts.FM - A Site For Anonymous Posting</h1>
+
+
 </body>
+
+<footer>Collaborators: CallumCheng and madCakes👽👻</footer>
 </html>
