attempted POST/GET from server

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <title>Thoughts.FM</title>
 </head>
 <body>
-    <h1>Thoughts.FM - A Site For Anonymous Posts</h1>
+    <h1>Thoughts.FM - post your anonymous stories</h1>
 
     <section class="create-post">        
     <div class="form-center"></div>
@@ -26,9 +26,9 @@
     </form>
 
     <div class="display-posts">
-        <h2 class = display-title> A Blog</h2>
-        <h2 class = display-name>Callum Cheng</h2>
-        <p class = display-content>This is</p>
+        <h2 id = display-title>Lap 2 Code Challenge</h2>
+        <h2 id = display-name>Anonymous</h2>
+        <p id = display-content>"This is rather bloody difficult !"</p>
     </div>
 
 
